@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-24T01:00:04Z",
+  "timestamp" : "2022-06-24T16:15:39Z",
   "count_outdated" : 353,
   "uniques_outdated" : 190,
   "count" : 379,
-  "uniques" : 205,
+  "uniques" : 206,
   "clones" : [
     {
       "timestamp": "2022-06-10T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -93,6 +93,13 @@
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
